Stop the navigation from jumping two pixels.

--- a/_sass/site_header.scss
+++ b/_sass/site_header.scss
@@ -46,6 +46,7 @@
     width: 100% / 7;
     display: table-cell;
     vertical-align: middle;
+    border: 1px solid transparent;
   }
 
   a {
@@ -64,5 +65,5 @@ body.appointments .site-header nav li.appointments,
 body.resources .site-header nav li.resources,
 body.contact .site-header nav li.contact {
   background: $navigation-active-background-color;
-  border: 1px solid $navigation-active-border-color;
+  border-color: $navigation-active-border-color;
 }
