--- a/_sass/site_main.scss
+++ b/_sass/site_main.scss
@@ -16,6 +16,8 @@
     width: 100% / 6;
     display: table-cell;
     vertical-align: middle;
+    border: 1px solid transparent;
+    border-top: none;
   }
 
   a {
@@ -35,6 +37,5 @@ body.therapies .site-main nav li.therapies,
 body.parenting .site-main nav li.parenting,
 body.consultation-and-teaching .site-main nav li.consultation-and-teaching {
   background: $sub-navigation-active-background-color;
-  border: 1px solid $sub-navigation-active-border-color;
-  border-top: none;
+  border-color: $sub-navigation-active-border-color;
 }
